# SASA

./: .gitignore  README.md  gui.ui  main.py  pyproject.toml  sample settings.xlsx  sasa.py
sample data/10 Desats/: SB001.csv  SB006.csv  SB008.csv  SB010.csv  SB029.csv  SB059.csv  SB072.csv
sample data/10 No Desats/: SB004.csv  SB042.csv  SB077.csv  SB086.csv
sample data/20 Mixed/: SB002.csv  SB009_time_off_0900.csv  SB013.csv  SB022_time_off_0830.csv  SB026a.csv  SB026b.csv  SB045.csv  SB085a.csv  SB096.csv  SB098.csv  SB105.csv  SB107.csv  SB109.csv  SB114.csv
sample data/pooled/: SB007.csv  SB017.csv  SB020.csv  SB024.csv  SB031.csv  SB033.csv  SB041.csv  SB044.csv  SB047.csv  SB051.csv  SB075.csv  SB080.csv  SB085b.csv  SB090.csv  SB093.csv  SB110.csv  SB115.csv
sample output/: Aggregate.xlsx  SB001_night.xlsx  SB002_night.xlsx  SB004_night.xlsx  SB006_night.xlsx  SB007_night.xlsx  SB008_night.xlsx  SB009_night.xlsx  SB010_night.xlsx  SB013_night.xlsx  SB017_night.xlsx  SB020_night.xlsx  SB022_night.xlsx  SB024_night.xlsx  SB026_night.xlsx  SB029_night.xlsx  SB031_night.xlsx  SB033_night.xlsx  SB041_night.xlsx  SB042_night.xlsx  SB044_night.xlsx  SB045_night.xlsx  SB047_night.xlsx  SB051_night.xlsx  SB059_night.xlsx  SB072_night.xlsx  SB075_night.xlsx  SB077_night.xlsx  SB080_night.xlsx  SB085_night.xlsx  SB086_night.xlsx  SB090_night.xlsx  SB093_night.xlsx  SB096_night.xlsx  SB098_night.xlsx  SB105_night.xlsx  SB107_night.xlsx  SB109_night.xlsx  SB110_night.xlsx  SB114_night.xlsx  (+1 more)
